--- a/LeNet.ipynb
+++ b/LeNet.ipynb
@@ -196,6 +196,7 @@
     "    \"\"\"\n",
     "    LeNet-5\n",
     "    Input: 1x32x32\n",
+    "    Output: 10\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self):\n",
